Generalize for 16:4 aspectratio

--- a/PSI_test.tex
+++ b/PSI_test.tex
@@ -121,7 +121,7 @@
 \begin{columns}
   \begin{column}{1.2\linewidth}
      If you need a lot of space, just use an oversized column, as in the code of this slide
-     \includegraphics[width=12.5cm]{PSIlandscape}
+     \includegraphics[width=\linewidth]{PSIlandscape}
   \end{column}
 \end{columns}
 \end{frame}
