--- a/PSI43.sty
+++ b/PSI43.sty
@@ -4,6 +4,7 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{PSI43}[2021/09/14 1.0.0 PSI Beamer Template 4:3 ratio]
 
+\RequirePackage{microtype}
 \RequirePackage[no-math]{fontspec}
 \setsansfont[Ligatures=NoCommon]{Calibri}
 \definecolor{PSIgray}{rgb}{0.4625,0.4625,0.4625}
@@ -12,6 +13,37 @@
 \beamertemplatenavigationsymbolsempty
 \useinnertheme{circles}
 \setbeamercolor*{item}{fg=black}
+%
+% Check format: Usage: \ifratio{43}{do}{else}:
+
+\makeatletter%
+\newcommand\ifratio[3]{%
+\ifnum#1=169%
+    \ifdim\beamer@paperwidth=16.00cm\relax%
+        \ifdim\beamer@paperheight=9.00cm\relax%
+            #2%
+        \else%
+            #3%
+        \fi%
+    \else%
+        #3%
+    \fi%
+\else%
+    \ifnum#1=43%
+        \ifdim\beamer@paperwidth=12.80cm\relax%
+            \ifdim\beamer@paperheight=9.60cm\relax%
+                #2%
+            \else%
+                #3%
+            \fi%
+        \else%
+            #3%
+        \fi%
+    \fi%
+\fi%
+}
+\makeatother%
+
 % The gray square:
 \setbeamertemplate{background canvas}{%
   \raisebox{-0.3\paperheight}[0pt][0pt]{%
@@ -41,7 +73,10 @@
 \color{PSIverylightgray}{\rule{0.4\paperwidth}{5cm}}%
 \makebox[0cm]{\hspace*{-3.2cm}\raisebox{3.6cm}{\includegraphics[width=2cm]{PSI}}}%
 \hspace*{0.12cm}%
-\includegraphics[height=5cm]{PSIlandscape.jpg}%
+\ifratio{43}{%
+  \includegraphics[height=5cm]{PSIlandscape43WirSchaffenWissen.jpg}}{%
+  \includegraphics[height=5cm]{PSIlandscape169WirSchaffenWissen.jpg}}%
+%\includegraphics[height=5cm]{\ifratio{43}{PSIlandscape43WirSchaffenWissen.jpg}{PSIlandscape169WirSchaffenWissen.jpg}}%
 \hspace*{0.12cm}%
 \color{PSIverylightgray}{\rule{0.08\paperwidth}{5cm}}\par%
   \usebeamerfont{institute}{\color{PSIgray}{%
@@ -58,35 +93,29 @@
 \hfill\usebeamerfont{institute}{\color{PSIgray}{\insertdate}}\hspace{1cm}
 }
 
-\newcommand{\PSIfigskip}{-2cm}
+
 \newcommand{\PSIfill}{\vskip 0pt plus 1filll}
-\newcommand{\PSIvspace}{%
-\makeatletter%
-\ifdim\beamer@paperwidth=16.00cm\relax%
-\vspace*{3.0ex}%
-\renewcommand{\PSIfigskip}{2cm}%
-\else%
-\vspace*{3.7ex}%
-\fi%
-\makeatother}
+\newcommand{\PSIvspace}{\ifratio{43}{\vspace*{3.7ex}}{\vspace*{3ex}}}
 
-
-
-\newcommand*{\PSItrailer}[2][0.4\textwidth]{
+\newcommand*{\PSItrailer}[3][0.4\textwidth]{
   \usebackgroundtemplate{%
-%\raisebox{-0.3\paperheight}[0pt][0pt]{%
-%    \makebox[1cm][l]{\color{PSIlightgray}{\rule{1cm}{1cm}}}}%
-  \hspace*{1.25cm}%
-  \includegraphics[width=1.2\linewidth, trim = -0cm -0cm -0cm \PSIfigskip]{PSIlandscape.jpg}}
+\raisebox{-0.3\paperheight}[0pt][0pt]{%
+    \makebox[1cm][l]{\color{PSIlightgray}{\rule{1cm}{1cm}}}}
+    \hspace*{0.01cm}
+    \raisebox{-0.95\textheight}{
+\ifratio{43}{%
+  \includegraphics[height=0.82\textheight]{PSIlandscape43.jpg}}{%
+  \includegraphics[height=0.82\textheight]{PSIlandscape169.jpg}}%
+      }}
 \setbeamertemplate{footline}{}%
-\begin{frame}{Wir schaffen Wissen $-$ heute f\"{u}r morgen}
-   \pgfsetfillopacity{0.75}{
-     \colorbox{gray!20}{
+\begin{frame}{#2}
+  \pgfsetfillopacity{0.75}{
+     \colorbox{white!20}{
        \begin{minipage}{#1}
-         #2
+         #3
          \vfill
        \end{minipage}}}
- \vfill
+   \vfill
 \end{frame}%
 }
 
