--- a/PSI_test.tex
+++ b/PSI_test.tex
@@ -24,7 +24,7 @@
 \institute[LEA, PSI]{Laboratory of Energy Systems Analysis, Paul Scherrer Institute}
 % if short institute is given as  an option, it will be taken for the footline
 
-\subtitle{1st line of subtitle\\2nd line (different no of lines move the gray box at correct position. Empty line:  $\sim$\textbackslash\textbackslash)}
+\subtitle{\textbf{1st line of subtitle}\\2nd line (different no of lines move the gray box at correct position. Empty line:  $\sim$\textbackslash\textbackslash)}
 
 \date{LEA Seminar, 1.1.2021} % can be left empty
 
@@ -129,7 +129,7 @@ You can overwrite the margins with a wide column:
 \end{columns}
 \end{frame}
 
-\PSItrailer{Wir schaffen Wissen $-$ heute f\"{u}r morgen}{
+\PSItrailer{Wir schaffen Wissen -- heute für morgen}{
     \textbf{My thanks go to}
      \smallskip
     \begin{itemize}
