Allow Ligatures in frametitle
 - Rare ligatures are enabled now. "Wir schaffen.." is now correct with ligatures

--- a/PSI43.sty
+++ b/PSI43.sty
@@ -65,7 +65,7 @@
 %\logo{\includegraphics[height=0.4cm]{PSI}\hspace*{.89\paperwidth}\hfill \vspace{.836\paperheight}}
 % Frametitle:
 \setbeamertemplate{frametitle}[default][left,leftskip=\leftBorder]%
-\setbeamerfont{frametitle}{family={\fontspec[Ligatures=TeX]{Georgia}}}
+\setbeamerfont{frametitle}{family={\fontspec[Ligatures={TeX,Common,Rare}]{Georgia}}}
 \addtobeamertemplate{frametitle}{\vskip+0.2cm\raisebox{-0.3ex}{\includegraphics[width=2.5em]{PSI}}\hspace*{0em}}{}
 \setbeamercolor{frametitle}{fg=PSIgray}
 % Text margin:
